Closed
Bug 1685555
Opened 5 years ago
Closed 5 years ago
Build bustage: nsUserInfoUnix.cpp:47:39: error: no member named 'IsLower' in 'nsCRT'
Categories
(MailNews Core :: Backend, defect)
Tracking
(thunderbird_esr78 unaffected)
RESOLVED
FIXED
86 Branch
| Tracking | Status | |
|---|---|---|
| thunderbird_esr78 | --- | unaffected |
People
(Reporter: aleca, Assigned: mkmelin)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
|
1.03 KB,
patch
|
aleca
:
review+
|
Details | Diff | Splinter Review |
Thunderbird still uses this removed method: https://searchfox.org/comm-central/rev/7f53d67154dd37c6143b96ae5c5d78ad2b53e13a/common/src/nsUserInfoUnix.cpp#47
This issue seems to affect only Thunderbird on Linux.
| Reporter | ||
Updated•5 years ago
|
OS: Unspecified → Linux
Hardware: Unspecified → Desktop
| Assignee | ||
Comment 1•5 years ago
|
||
I think we can just avoid calling ToLower. The way to call it would probably be to call call ToUpper and compare with what we got. But, seem like needless complication.
Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Attachment #9195904 -
Flags: review?(alessandro)
| Reporter | ||
Comment 2•5 years ago
|
||
Comment on attachment 9195904 [details] [diff] [review]
bug1685555_tolower.patch
Review of attachment 9195904 [details] [diff] [review]:
-----------------------------------------------------------------
Indeed, this is good!
Attachment #9195904 -
Flags: review?(alessandro) → review+
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/3397a36f45c9
avoid using nsCRT:IsLower which was removed in bug 1685052. r=aleca
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
| Assignee | ||
Updated•5 years ago
|
status-firefox85:
--- → unaffected
status-firefox86:
affected → ---
Component: XPCOM → Backend
Product: Core → MailNews Core
Target Milestone: --- → 86 Branch
Updated•5 years ago
|
status-firefox85:
unaffected → ---
Keywords: regression
You need to log in
before you can comment on or make changes to this bug.
Description
•