Bug 1685555 - avoid using nsCRT:IsLower which was removed in bug 1685052. r=aleca